[project]
name = "dh-bl-core"
version = "0.1.0"
description = "Базовые механизмы для работы с приложением"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "radon>=6.0.1",
    "sqlalchemy>=2.0.45",
    "x-request-id-middleware>=0.2.2",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "pylint>=4.0.4",
    "pyright>=1.1.407",
]

[tool.black]
line-length=120

[tool.isort]
line_length=120
profile="black"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
